--- a/challenge02/package.json
+++ b/challenge02/package.json
@@ -13,7 +13,8 @@
     "mysql2": "^1.6.5",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.16.0"
+    "sequelize": "^5.16.0",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "eslint": "^6.2.2",
